[project]
name = "python"
version = "0.1.0"
description = "Project Euler in Python"
authors = []
dependencies = [
    "numpy~=1.24.3",
    "black~=23.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
